--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Welcome to AAI Digital Pass System</h1>
+    <p>This is System is supposed to create a digital pass.</p>
 </body>
 </html>
